--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="./" />
+    <base href="/SnowFightBuild/" />
     <meta charset="utf-8">
 
     <title>Cocos Creator | SnowFight</title>
