--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <base href="/SnowFightBuild/" />
   <meta charset="utf-8">
 
   <title>Cocos Creator | attackontitan</title>
@@ -52,14 +53,14 @@
 
 <!-- Polyfills bundle. -->
 
-<script src="src/polyfills.bundle.js" charset="utf-8"> </script>
+<script src="./src/polyfills.bundle.js" charset="utf-8"> </script>
 
 
 <!-- SystemJS support. -->
-<script src="src/system.bundle.js" charset="utf-8"> </script>
+<script src="./src/system.bundle.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="./src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
     System.import('./index.js').catch(function(err) { console.error(err); })
